readme-export/v3.0.1/Navigate the guide/endpoint-showcase.md
---
title: "🏠 Endpoint Showcase"
slug: "endpoint-showcase"
excerpt: "Discover how CoinGecko API is used at CoinGecko.com and GeckoTerminal.com"
hidden: false
createdAt: "Sun Feb 04 2024 15:48:39 GMT+0000 (Coordinated Universal Time)"
updatedAt: "Wed Feb 26 2025 08:46:45 GMT+0000 (Coordinated Universal Time)"
---
## CoinGecko

### [Home Page](https://www.coingecko.com)

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/5efbe42-image.png",
        null,
        ""
      ],
      "align": "center",
      "border": true
    }
  ]
}
[/block]


1. [/global](/reference/crypto-global) — Display global crypto data such as number of active cryptocurrencies, exchanges and etc.
2. [/search/trending](/reference/trending-search) — Display trending search coins, NFTs and categories.
3. `/coins/top_gainers_losers` (Exclusive for Paid Plan subscribers) — Display the largest gainers in 24hr.
4. [/coins/categories](/reference/coins-categories) — Display all the categories list.
5. [/coins/markets](/reference/coins-markets) — Display all the supported coins with market related data.

<br />

### [Coin Page](https://www.coingecko.com/en/coins/bitcoin)

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/2f71923-image.png",
        null,
        ""
      ],
      "align": "center",
      "border": true
    }
  ]
}
[/block]


1. [/coins/{id}](/reference/coins-id) — Display all the coin data including name, price, market related data, website, explorers and etc.
2. [/simple/price](/reference/simple-price) — Display data such as latest coin price, market cap and 24hr trading volume.
3. [/coins/{id}/history](/reference/coins-id-history) — Display the historical price data.  
   [/coins/{id}/market_chart](/reference/coins-id-market-chart) — Display the historical data in line chart.  
   [/coins/{id}/market_chart/range](/reference/coins-id-market-chart-range) — Display the historical data within time range.  
   [/coins/{id}/ohlc](/reference/coins-id-ohlc) — Display the historical data in candlestick chart.

<br />

### [Exchanges Page](https://www.coingecko.com/en/exchanges/jupiter)

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/9e12298-image.png",
        null,
        ""
      ],
      "align": "center",
      "border": true
    }
  ]
}
[/block]


1. [/exchanges/{id}](/reference/exchanges-id) — Display the exchange information such as name, type, market related data such as trading volume and etc.
2. [/exchanges/{id}/volume_chart](/reference/exchanges-id-volume-chart) — Display the historical volume chart data.
3. [/exchanges/{id}/tickers](/reference/exchanges-id-tickers) — Display the exchange's tickers.

<br />

### [NFTs Page](https://www.coingecko.com/en/nft/pudgy-penguins)

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/cda9241-image.png",
        null,
        ""
      ],
      "align": "center",
      "border": true
    }
  ]
}
[/block]


[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/cc963fe-image.png",
        null,
        ""
      ],
      "align": "center",
      "border": true
    }
  ]
}
[/block]


1. [/nfts/{id}](/reference/nfts-id) — Display NFT data such as name, contract address, website, market related data such as floor price, market cap, volume and etc. 
2. `/nfts/{id}/market_chart` (Exclusive for Paid Plan subscribers) — Display the historical market data in chart.
3. [/nfts/{id}](/reference/nfts-id) — Display the description of the NFT collection.
4. `/nfts/{id}/tickers` (Exclusive for Paid Plan subscribers) — Display the tickers of the NFT collection on different NFT marketplace.

<br />

**Try it out for free 👉 \[[GeckoTerminal Public API](https://www.geckoterminal.com/dex-api?utm_source=api-docs&utm_medium=referral&utm_content=endpoint-showcase)]**

[block:html]
{
  "html": "<a href=\"https://www.geckoterminal.com/dex-api?utm_source=api-docs&utm_medium=referral&utm_content=endpoint-showcase\" target=\"_blank\" rel=\"noopener noreferrer\">\n  <img src=\"https://files.readme.io/5677bf64a465f517f5d24396a846918d9b21f129d4778c7d09498b0575b4bdf5-3cec0bb4-c768-11ef-8915-0e0635d22f11.avif\" alt=\"Interested in On-chain DEX data?\" style=\"width: 100%; max-width: 600px; height: auto;\" />\n</a>"
}
[/block]
